--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>js-closure-notification</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -15,5 +15,6 @@
 
     <script src="script.js" defer></script>
 </body>
+
 
 </html>
